estable v1 CRUD BASICOS OK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,18 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 springdoc.show-actuator=true
+
+# ==================== ERROR HANDLING - INVALID ENDPOINTS ====================
+# Lanza excepción cuando no encuentra un endpoint (en lugar de devolver 404 de recurso estático)
+spring.mvc.throw-exception-if-no-handler-found=true
+# Desactiva la búsqueda de recursos estáticos
+spring.web.resources.add-mappings=false
+
+# ==================== SERVER CONFIGURATION ====================
+server.port=8080
+server.servlet.context-path=/
+
+# ==================== LOGGING ====================
+logging.level.root=INFO
+logging.level.ipss.web2.examen=DEBUG
+logging.level.org.springframework.web=DEBUG
