--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # ==================== SWAGGER / OPENAPI ====================
-springdoc.api-docs.path=/v3/api-docs
+springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
-springdoc.show-actuator=true
+springdoc.api-docs.enabled=true
+
 
 # ==================== ERROR HANDLING - INVALID ENDPOINTS ====================
 # Lanza excepción cuando no encuentra un endpoint (en lugar de devolver 404 de recurso estático)
