banner log terminal fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,13 @@ logging.level.org.springframework.web=INFO
 logging.level.org.springframework.boot=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.boot.web.embedded=INFO
+logging.level.org.springframework.boot.autoconfigure=WARN
+
+# Ver requests HTTP con colores
+logging.level.org.springframework.web.servlet.mvc.method.annotation=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
 
 # Colores ANSI en consola
 spring.output.ansi.enabled=ALWAYS
@@ -48,7 +55,8 @@ spring.application.name=IPSS WEB2 EXAMEN
 spring.main.log-startup-info=true
 
 # Log pattern con colores
-logging.pattern.console=%d{HH:mm:ss.SSS} %highlight(%-5level) %cyan([%thread]) %yellow(%logger{36}) : %msg%n
+logging.pattern.console=%clr(%d{HH:mm:ss.SSS}){faint} %clr(%5p) %clr(|){faint} %clr([%-15.15t]){magenta} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %clr(%m){white}%n%wEx
+
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # ==================== ACTUATOR - MONITOREO ====================
